# godot

./: CMakeLists.txt  CMakePresets.json
cmake/: call_query.txt  cmake_targets.py  generate_files.py
editor/icons/: editor_icons_builders.py
